# sqlitemcpserverpgr

./: LICENSE  README.md  pyproject.toml  server.json
mcp-sqlite-server-nsdg/: main.py
sqlitemcpserverpgr/: __init__.py
