[project]
name = "sqlitemcpserverpgr"
version = "1.0.0"
description = "A Python MCP server."
readme = "README.md"
requires-python = ">=3.9"

[tool.mcp]
name = "io.github.thatikondanikhil/sqlitemcpserverpgr"


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlitemcpserverpgr"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server that provides sqlite tools"
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["mcp", "model-context-protocol", "time", "utc", "timestamp"]
dependencies = [
    "mcp==1.13.1",
]

[project.urls]
Repository = "https://github.com/thatikondanikhil/sqlitemcpserverpgr.git"

[project.scripts]
time-mcp-pypi = "sqlitemcpserverpgr.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sqlitemcpserverpgr*"]

[tool.setuptools.package-data]
sqlitemcpserverpgr = ["*.json"]
